implemented feature of time switching
